--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
 
         <div class="actions">
           <div class="rock-div action" id="rock" onclick="startGame('rock')">
-            <img src="./images/rock.png" alt="rock" width="65px" />
+            <img src="./image/rock (2).png" alt="rock" width="65px" />
           </div>
 
           <div class="paper-div action" id="paper" onclick="startGame('paper')">
-            <img src="./images/paper.png" alt="paper" width="65px" />
+            <img src="./image/paper (4).png" alt="paper" width="65px" />
           </div>
           <div class="scissor-div action"
             id="scissor"
             onclick="startGame('scissor')"
           >
-            <img src="./images/scissor.png" alt="scissor" width="50px" />
+            <img src="./image/scissor.png" alt="scissor" width="50px" />
           </div>
         </div>
 
@@ -179,8 +179,8 @@
 
 
     <section class="won-game">
-      <img src="./images/Group 5Stars.png" alt="stars" id="stars" />
-      <img src="./images/VectorTrophy.png" alt="VectorTrophy" id="trophy" />
+      <img src="./image/stars.png" alt="stars" id="stars" />
+      <img src="./image/VectorTrophy.png" alt="VectorTrophy" id="trophy" />
       <h2 class="won-game-heading">HURRAY!!</h2>
       <h6 class="won-game-sub-heading">YOU WON THE GAME</h6>
       <button class="filled-btn large" onclick="playAgain()">play again</button>
