--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
         <div class="actions">
           <div class="rock-div action" id="rock" onclick="startGame('rock')">
-            <img src="./image/rock (2).png" alt="rock" width="65px" />
+            <img src="./image/rock%20(2).png" alt="rock" width="65px" />
           </div>
 
           <div class="paper-div action" id="paper" onclick="startGame('paper')">
-            <img src="./image/paper (4).png" alt="paper" width="65px" />
+            <img src="./image/paper%20(4).png" alt="paper" width="65px" />
           </div>
           <div class="scissor-div action"
             id="scissor"
